--- a/index.html
+++ b/index.html
@@ -1,181 +1,196 @@
-<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
-<link rel="stylesheet" href="fonts/fonts.css" />
-<link rel="stylesheet" href="styles/global.css" />
-<link rel="stylesheet" href="styles/style.css" />
-</head>
-
-</html>
-
-<body>
-  <header class="header">
-    <nav class="header__menu">
-      <ul class="header__links-list">
-        <li class="header__links-list-item header__links-list-item_no-bullit">
-          <a class="header__link header__link_active" href="#0">главная</a>
-        </li>
-        <li class="header__links-list-item">
-          <a class="header__link" href="#lots">посмотреть лоты</a>
-        </li>
-        <li class="header__links-list-item">
-          <a class="header__link" href="#about">об аукционе</a>
-        </li>
-      </ul>
-    </nav>
-    <a class="header__logo" href="#0">
-      <img class="header__logo-image" src="images/logo-black.svg" alt="логотип" />
-    </a>
-    <address class="address header__address">
-      <a href="tel:+99995555555">+9 999 555 5555</a>
-      <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
-      <p>наб. Принсенграхт 263-265,Амстердам</p>
-    </address>
-  </header>
-
-  <main>
-    <section class="cover">
-      <div class="overlay"></div>
-      <h1 class="cover-title">
-        <span class="aligned-text aligned-text_left">
-          о<span class="letter-spacing-extended">но</span>
-        </span>
-        <span class="aligned-text aligned-text_center">
-          те<span class="letter-spacing-extended">бе</span>
-        </span>
-        <span class="aligned-text aligned-text_right">
-          <span class="letter-spacing-extended">н</span>ад<span class="no-letter-spacing">о</span>
-        </span>
-      </h1>
-      <div class="cover__description">
-        <p class="cover__description-text">
-          Аукцион вещей, в которые никто не верил
-        </p>
-        <button class="bet-button">сделать ставку</button>
-      </div>
-    </section>
-    <section class="lots" id="lots">
-      <h2 class="lots__heading">Лоты</h2>
-      <ul class="lots__card-list">
-        <li class="lots__card-list-item">
-          <a class="card-link" href="#0" target="_blank">
-            <article class="card card_type_film">
-              <div class="overlay"></div>
-              <h3 class="card__title">
-                Фильм режиссёра, который бросил киношколу
-              </h3>
-              <p class="card__text">
-                Не просто бросил, а ушёл с первой лекции. Какой была бы ваша
-                ставка, если бы вы не знали, что режиссёр — Пол Томас
-                Андерсон?
-              </p>
-            </article>
-          </a>
-        </li>
-        <li class="lots__card-list-item">
-          <a class="card-link" href="#0" target="_blank">
-            <article class="card card_type_book">
-              <div class="overlay"></div>
-              <h3 class="card__title">
-                Книга, где описан один скучный день из жизни рекламного агента
-              </h3>
-              <p class="card__text">
-                Объёмом почти в тысячу страниц. Иногда без знаков препинания и
-                с переходами на древнеанглийский. В ней одновременно
-                рассказывается о 16 июня 1904 года и об истории литературы,
-                начиная с античных времён. И это всё накладывается на
-                эпическую поэму Гомера. Сколько бы вы поставили на «Улисса»
-                Джеймса Джойса?
-              </p>
-            </article>
-          </a>
-        </li>
-        <li class="lots__card-list-item">
-          <a class="card-link" href="#0" target="_blank">
-            <article class="card card_type_picture">
-              <div class="overlay"></div>
-              <h3 class="card__title">
-                Картина, которую повторит даже 5-летний сын маминой подруги
-              </h3>
-              <p class="card__text">
-                Ну действительно, там линия, тут кружочек, а здесь и вовсе
-                что-то похожее на инфузорию-туфельку. Никаких полей, лесов,
-                котиков… Сколько бы вы на такое поставили, если бы не знали,
-                что это — одна из революционных работ Кандинского?
-              </p>
-            </article>
-          </a>
-        </li>
-      </ul>
-      <a class="lots__look-more-link" href="#0" target="_blank">
-        посмотреть больше
-      </a>
-    </section>
-    <section class="about" id="about">
-      <div class="about__logo">
-        <img class="about__logo-image" src="images/logo-white.svg" alt="логотип" />
-      </div>
-      <div class="about__column">
-        <h2 class="about__title">Об аукционе</h2>
-        <div class="about__text-gap">
-          <p class="about__text">
-            Здесь вы не встретите очередное пафосное собрание невероятно
-            дорогого антиквариата. Наши лоты вообще не должны были попасть ни
-            на один аукцион. Потому что кому нужен дневник девочки-подростка
-            или картина, которую может нарисовать даже ребёнок? Кому нужны все
-            эти странные вещи, созданные любителями?
+<!DOCTYPE html>
+<html lang="ru">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
+    <link rel="stylesheet" href="fonts/fonts.css" />
+    <link rel="stylesheet" href="styles/global.css" />
+    <link rel="stylesheet" href="styles/style.css" />
+  </head>
+  <body>
+    <header class="header">
+      <nav>
+        <ul class="header_links-list">
+          <li class="header_links-list-item no-circle">
+            <a class="no-line-link" href="">главная</a>
+          </li>
+          <li class="header_links-list-item circle line-link">
+            <a class="no-line-link" href="">посмотреть лоты</a>
+          </li>
+          <li class="header_links-list-item circle line-link">
+            <a class="no-line-link" href="">об аукционе</a>
+          </li>
+        </ul>
+      </nav>
+      <a href="#0" class="header-logo"
+        ><img src="images/logo-black.svg" alt="логотип оно тебе надо"
+      /></a>
+      <address class="header-adress">
+        <a class="line-link" href="tel:+9999555555">+9 999 555 5555</a><br />
+        <a class="line-link" href="mailto:info@sobaka.ge">info@sobaka.ge</a>
+        <p class="adress">наб. Принсенграхт 263-265, Амстердам</p>
+      </address>
+    </header>
+    <main>
+      <section class="cover">
+        <h1 class="cover-title">
+          <span class="aligned-text_left"
+            >о<span class="letter-spacing-extende">но</span></span
+          >
+          <span class="aligned-text_center"
+            >те<span class="letter-spacing-extende">бе</span></span
+          >
+          <span class="aligned-text_right letter-spacing-extende"
+            >н<span class="aligned-text_right"
+              >ад<span class="aligned-text_right no-letter-spacing"
+                >о</span
+              ></span
+            ></span
+          >
+        </h1>
+        <div class="cover_description">
+          <p class="cover_description-text">
+            аукцион вещей, в которые никто не верил
           </p>
-          <p class="about__text">
-            Слишком сложные или, наоборот, слишком простые. Опережающие своё
-            время. В пух и прах растерзанные критиками. Непринятые и
-            непонятые. Когда-то они казались просто неудачными. Но, несмотря
-            на критику, кажущуюся простоту или сложность, сейчас без этих
-            лотов невозможно представить современную культуру. Когда в эти
-            вещи не верил никто, продолжали верить их создатели. И сейчас эти
-            лоты стали культовыми.
-          </p>
+          <button class="bet-button">Сделать ставку</button>
         </div>
-      </div>
-    </section>
-  </main>
-
-  <footer class="footer">
-    <address class="address">
-      <a href="tel:+99995555555">+9 999 555 5555</a>
-      <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
-      <p>наб. Принсенграхт 263-265,Амстердам</p>
-    </address>
-    <nav class="footer__menu">
-      <ul class="footer__menu-list">
-        <li class="footer__menu-list-item">
-          <a class="footer__menu-link footer__menu-link_active" href="#0">главная</a>
+        <div class="overlay"></div>
+      </section>
+      <section class="lots">
+        <h2 class="lots-title">лоты</h2>
+        <ul class="lots_card-list">
+          <li class="lots_card-list-item">
+            <a href="#0" class="no-line-link">
+              <article class="card card-type-film">
+                <h3 class="card-title">
+                  Фильм режиссёра, который бросил киношколу
+                </h3>
+                <p class="card-description">
+                  Не просто бросил, а ушёл с первой лекции. Какой была бы ваша
+                  ставка, если бы вы не знали, что режиссёр — Пол Томас
+                  Андерсон?
+                </p>
+                <div class="overlay"></div>
+              </article>
+            </a>
+          </li>
+          <li class="lots_card-list-item">
+            <a href="#1" class="no-line-link">
+              <article class="card card-type-book">
+                <h3 class="card-title">
+                  Книга, где описан один скучный день из жизни рекламного агента
+                </h3>
+                <p class="card-description">
+                  Объёмом почти в тысячу страниц. Иногда без знаков препинания и
+                  с переходами на древнеанглийский. В ней одновременно
+                  рассказывается о 16 июня 1904 года и об истории литературы,
+                  начиная с античных времён. И это всё накладывается на
+                  эпическую поэму Гомера. Сколько бы вы поставили на «Улисса»
+                  Джеймса Джойса?
+                </p>
+                <div class="overlay"></div>
+              </article>
+            </a>
+          </li>
+          <li class="lots_card-list-item">
+            <a href="#2" class="no-line-link">
+              <article class="card card-type-picture">
+                <h3 class="card-title">
+                  Картина, которую повторит даже 5-летний сын маминой подруги
+                </h3>
+                <p class="card-description">
+                  Ну действительно, там линия, тут кружочек, а здесь и вовсе
+                  что-то похожее на инфузорию-туфельку. Никаких полей, лесов,
+                  котиков… Сколько бы вы на такое поставили, если бы не знали,
+                  что это — одна из революционных работ Кандинского?
+                </p>
+                <div class="overlay"></div>
+              </article>
+            </a>
+          </li>
+        </ul>
+        <div class="lots_look-more-link"><a href="">посмотреть больше</a></div>
+      </section>
+      <section class="about">
+        <div class="about-logo">
+          <div class="about_background-logo">
+            <img
+              class="about_logo-img"
+              src="images/logo-white.svg"
+              alt="логотип на черном фоне"
+            />
+          </div>
+        </div>
+        <div class="about-column">
+          <h2 class="about-title">об аукционе</h2>
+          <article class="about-text">
+            <p>
+              Здесь вы не встретите очередное пафосное собрание невероятно
+              дорогого антиквариата. Наши лоты вообще не должны были попасть ни
+              на один аукцион. Потому что кому нужен дневник девочки-подростка
+              или картина, которую может нарисовать даже ребёнок? Кому нужны все
+              эти странные вещи, созданные любителями?
+            </p>
+            <p>
+              Слишком сложные или, наоборот, слишком простые. Опережающие своё
+              время. В пух и прах растерзанные критиками. Непринятые и
+              непонятые. Когда-то они казались просто неудачными. Но, несмотря
+              на критику, кажущуюся простоту или сложность, сейчас без этих
+              лотов невозможно представить современную культуру. Когда в эти
+              вещи не верил никто, продолжали верить их создатели. И сейчас эти
+              лоты стали культовыми.
+            </p>
+          </article>
+        </div>
+      </section>
+    </main>
+    <footer class="footer">
+      <address class="footer-adress">
+        <a class="line-link" href="tel:+99995555555">+9 999 555 5555</a><br />
+        <a class="line-link" href="mailto:info@sobaka.ge">info@sobaka.ge</a>
+        <p class="adress">наб. Принсенграхт 263-265, Амстердам</p>
+      </address>
+      <nav>
+        <ul class="footer-menu">
+          <li class="footer-list-item no-circle">
+            <a class="no-line-link" href="">главная</a>
+          </li>
+          <li class="footer-list-item line-link no-circle">
+            <a class="no-line-link" href="">посмотреть лоты</a>
+          </li>
+          <li class="footer-list-item line-link no-circle">
+            <a class="no-line-link" href="">об аукционе</a>
+          </li>
+        </ul>
+      </nav>
+      <ul class="footer_social-list">
+        <li>
+          <a href="#yt"
+            ><img
+              class="footer_social-icon"
+              src="images/yt.svg"
+              alt="иконка ютуба"
+          /></a>
         </li>
-        <li class="footer__menu-list-item">
-          <a class="footer__menu-link" href="#lots">посмотреть лоты</a>
+        <li>
+          <a href="#vk"
+            ><img
+              class="footer_social-icon"
+              src="images/vk.svg"
+              alt="иконка социальной сети вконтакте"
+          /></a>
         </li>
-        <li class="footer__menu-list-item">
-          <a class="footer__menu-link" href="#about">об аукционе</a>
+        <li>
+          <a href="#pin"
+            ><img
+              class="footer_social-icon"
+              src="images/pinterest.svg"
+              alt="иконка пинтерест"
+          /></a>
         </li>
       </ul>
-    </nav>
-    <ul class="footer__social-list">
-      <li class="footer__social-list-item">
-        <a class="footer__social-link" href="#0" target="_blank">
-          <img class="footer__social-icon" src="images/yt.svg" alt="Youtube" />
-        </a>
-      </li>
-      <li class="footer__social-list-item">
-        <a class="footer__social-link" href="#0" target="_blank">
-          <img class="footer__social-icon" src="images/vk.svg" alt="VK" />
-        </a>
-      </li>
-      <li class="footer__social-list-item">
-        <a class="footer__social-link" href="#0" target="_blank">
-          <img class="footer__social-icon" src="images/pinterest.svg" alt="Pinterest" />
-        </a>
-      </li>
-    </ul>
-  </footer>
-</body>
-
+    </footer>
+  </body>
 </html>
